# the-waratah

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.rs  index.html  package-lock.json  sitemap.txt  sitemap.xml  tailwind.config.js
.github/workflows/: pages.yml
src/: ad.rs  article.rs  components.rs  crossword.rs  main.rs
src/articles/: drugs-in-pharmacy  launch-of-the-yesterday  not-a-real-article  war-leads-to-death
src/articles/Business/: EV-dealers-charge-less  egg-prices-rise-as-chickens-stop-working
src/articles/Conflict/: war-leads-to-death  weapons-cause-war-deaths
src/articles/Crime/: bus-with-open-doors-stolen  drugs-found-in-pharmacy  drugs-in-pharmacy  judge-tries-shooting-jaywalker  strongman-holds-up-building
src/articles/Lifestyle/: local-schoolkids-make-excellent-meals  man-gets-beach-house-due-to-coastal-erosion  solar-powered-lights
src/articles/Local News/: camo-soldiers-disappear  new-news-site  search-for-running-refrigerator-begins
src/articles/Media/: launch-of-the-yesterday  new-news-site  not-a-real-article
src/articles/National/: camo-soldiers-disappear  search-for-running-refrigerator-begins
src/articles/Politics/: protesters-join-marathon  weapons-cause-war-deaths
src/articles/World/: camo-soldiers-disappear  search-for-running-refrigerator-begins
src/crosswords/: 0  1
src/styles/: input.css  output.css
