[package]
name = "the-yesterday"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
chrono = "0.4.38"
console_error_panic_hook = "0.1.7"
itertools = "0.13.0"
lazy_static = "1.4.0"
leptos = { version = "0.6.11", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.11", features = ["csr", "nightly"] }
rand = "0.8.5"
strum = { version = "0.26.2", features = ["derive"] }

[build-dependencies]
itertools = "0.13.0"
proc-macro2 = "1.0.86"
syn = "2.0.71"
